--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <p>hello this is a html</p>
-<p>this is a new feature im doing alright </p>
+<p>this is a new feature. im doing fine!!</p>
 </html>
